tests/snapshots/formatter__assignment_rhs_breaks_before_lhs_subset_in_function_formatted.snap
---
source: tests/formatter.rs
expression: formatted
---
interpolateCoefficients <- function(beta, intercepts, interpolation_list) {
  for (i in seq_along(interpolation_list$left)) {
    ip_intercepts[[i]] <- intercepts[[left]] * frac +
      intercepts[[right]] * (1 - frac)
  }
}
