tests/snapshots/formatter__assignment_subset_lhs_with_if_rhs_formatted.snap
---
source: tests/formatter.rs
expression: formatted
---
a <- function() {
  vnames[k] <- if (length(nm) && !is.na(nm) && nm != "") {
    nm
  } else {
    paste0("VV", i - n_nullll)
  }
}
