tests/snapshots/formatter__assignment_walrus_formatted.snap
---
source: tests/formatter.rs
expression: formatted
---
tibble("{name}" := value)
list(!!name := method)
rlang::list2(!!nm := x)
