tests/snapshots/formatter__call_comments_after_holes_formatted.snap
---
source: tests/formatter.rs
expression: formatted
---
fn(,,
  # comment
  x
)
fn(,,
  # comment1
  # comment2
  x
)
