tests/snapshots/formatter__call_empty_lines_between_args_formatted.snap
---
source: tests/formatter.rs
expression: formatted
---
fn(a, b, c)

fn(
  a,
  # comment1
  b,
  # comment2
  c
)

fn(
  # comment1
  ,
  # comment2
  ,
  b
)

fn(,
  # comment2
  ,
  b
)
