tests/snapshots/formatter__call_trailing_braced_expression_formatted.snap
---
source: tests/formatter.rs
expression: formatted
---
with(data, {
  col
})

with(data, {
  col
})

with(data, {
  col
})

with(
  data,
  # A comment
  {
    col
  }
)

with(
  data, # Prevents flattening
  {
    col
  }
)

with(data, expr = {
  col
})

with(data, foo = "bar", {
  col
})

# Not trailing, stays expanded
with(
  data,
  {
    col
  },
  foo = "bar"
)

# The lone argument is a bare symbol too long to fit on any line, so breaking
# the list buys no width (it overflows expanded too) --- only lines. ravel hugs
# instead; air expands. See `air_test_that`.
with(my_long_list_my_long_list_my_long_list_my_long_list_long_long_long_long_long_list, {
  col
})

# Collapses with empty braces
with(data, {})

with(data, {
  # dangling
})

# Collapses with empty braces
fn({})

fn({
  # dangling
})

fn({
  1 + 1
})

fn(a = {
  1 + 1
})

# The first argument here breaks, causing everything to fully expand
fn(
  {
    1 + 1
  },
  {
    1 + 1
  }
)

# Hole prevents `{` from looking like the last expression, so everything expands
fn(
  x,
  {
    1 + 1
  },
)
