tests/snapshots/formatter__call_trailing_inline_function_formatted.snap
---
source: tests/formatter.rs
expression: formatted
---
map(xs, \(x) x + 1)

map(xs, \(x) x + 1)

map(xs, function(x) x + 1)

map(xs, function(x) {})
map(
  xs_that_is_really_long_to_just_barely_pass_the_line_lengthhh,
  function(x) {}
)

map(xs, function(x) {{ x }})
map(
  xs_that_is_long_to_just_barely_pass_the_line_lengthhhhh,
  function(x) {{ x }}
)

map(xs, function(x) x)

map(
  my_long_list_my_long_list_my_long_list_my_long_list_my_long_list_my_long_list,
  function(my_long_argument) {
    my_long_body_my_long_body_my_long_body_my_long_body_my_long_body
  }
)

map(x, function(
  a,
  a_really_really_long_parameter,
  and_another_one_here_too_wow_this_is_long
) {
  1
})

map(my_long_list_my_long_list_my_long_list_my_long_list, function(
  my_long_argument
) {
  my_long_argument
})

map(my_long_list_my_long_list_my_long_list_my_long_list, function(
  my_long_argument
) {
  my_long_list_my_long_list_my_long_list_my_long_list_my_long_list
})

map(xs, function(my_long_argument) {
  my_long_argument + my_extra_long_extra_argument
})

map(xs, function(x, option = "a") x)

map(xs, function(x, option = "a") x)

map(xs, function(x, option = "a") x)

map(xs, function(x, option = "a") x)

map(x, function(a = {
  1
}) {
  1
})

fn(function(a = {
  1
}) {
  1
})
fn(function(
  a,
  a_really_really_long_parameter,
  and_another_one_here_too_wow_this_is_long
) {
  1
})

map(xs, .f = function(x) x + 1)
